tests/reference/julia-arrays_02-849d7b0.stderr
semantic error: Module 'lfortran_intrinsic_kind' not declared in the current source and the modfile was not found
 --> tests/../integration_tests/arrays_02.f90:3:28
  |
3 | integer, parameter :: dp = kind(0.d0)
  |                            ^^^^^^^^^^ 
